<resources>
    <string name="app_name">Raah</string>
    <string name="title_activity_select_device">SelectDeviceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="go_to_home">Go To Home</string>
    <string name="your_score">Your score</string>
    <string name="congratulations">Congratulations</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="add_new_player">Add New Player</string>
    <string name="submit">Submit</string>
    <string name="logo">Logo</string>
    <string name="player_list">Player List</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="show_scores">Show Scores</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="hop_0_to_9">Hop 0 to 9</string>
    <string name="hop_even_numbers">Hop Even Numbers</string>
    <string name="hop_odd_numbers">Hop Odd Numbers</string>
    <string name="scan">Scan</string>
    <string name="game_name">Game Name</string>
    <string name="prev">Prev</string>
    <string name="reset">Reset</string>
    <string name="forgot_password_click_here_to_reset">Forgot Password? Click here to reset</string>
    <string name="pass">Pass</string>
    <string name="connect">Connect</string>
    <string name="play_game">Play Game</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
</resources>