<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlayerActivity">
    <TextView
        android:id="@+id/addNewPlayerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/add_new_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewPlayerTextView"
        android:autofillHints="Name" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/username"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        android:autofillHints="Username" />
    <Button
        android:id="@+id/submitButtonAddPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <include layout="@layout/layout_progress_overlay"/>


</androidx.constraintlayout.widget.ConstraintLayout>