<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/headingLogInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingLogInTextView"
        android:autofillHints="Email" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:autofillHints="Password" />
    <Button
        android:id="@+id/submitButtonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"/>
    <include layout="@layout/layout_progress_overlay"/>

</androidx.constraintlayout.widget.ConstraintLayout>